# DocMind

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README_RU.md  docker-compose.cov.yml  docker-compose.test.yml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  run_stream.py  sonar-project.properties
.github/workflows/: codecov.yml
alembic/: env.py
alembic/versions/: 0a18a5ced57c_update_document_statuses.py  677262530e15_add_fixed_models.py  7da88587e149_add_analysis_version_field_to_documents_.py  c10c94257a0b_fix_fields_mime_type_and_document_status.py  cdf1a08832ea_update_user_model.py  d195fc6dacf9_update_documents_model_to_connect_with_.py  e00a34658771_add_provider_field_to_documents.py  e19c7fdbf793_init_users_and_documents.py
docs/images/: component.d2  component_ru.d2  sequence.puml  sequence_ru.puml  sequnce.puml
scripts/: migrate_local.py  seed_initial_prompt.py
scripts/prompts/: v1_0_0.txt
src/: main.py
src/DependencyInjection/: auth.py  documents.py  prompts.py  users.py
src/antivirus/: client.py  exceptions.py  scanner.py
src/api/: admin.py  auth.py  documents.py  users.py
src/core/: config.py  database.py  enums.py  exception_handlers.py  exceptions.py  jwt.py  lifespan.py  logging_config.py  middleware.py  mongo_database.py  rate_limiter.py  redis.py  security.py  token_blacklist.py  user_active_cache.py
src/core/middlewares/: rate_limit.py  request_context.py
src/events/: publisher.py  schemas.py
src/llm/: base.py  base_mapper.py  exceptions.py  factory.py  openai_compatible.py  schemas.py
src/llm/deepseek/: service.py
src/llm/gemini/: mapper.py  service.py
src/llm/kimi/: service.py
src/models/: __init__.py  base.py  documents.py  mongo_base.py  mongo_documents.py  mongo_prompts.py  users.py
src/repositories/: documents.py  mongo_documents.py  mongo_prompts.py  users.py
src/schemas/: auth.py  documents.py  prompts.py  users.py
src/services/: auth.py  base.py  documents.py  extractors.py  file_processor.py  prompts.py  users.py
src/stream/: app.py  middleware.py
src/stream/consumers/: base.py  document_analysis.py
src/worker/: antivirus_tasks.py  base_task.py  celery_app.py  extraction_tasks.py  tasks.py
tests/: conftest.py
tests/api/: test_auth.py
tests/api/admin/: test_create_prompt.py  test_update_user_status.py
tests/api/auth/: test_login.py  test_logout.py  test_refresh.py  test_user_active_cache_fallback.py
tests/api/documents/: test_cancel_document.py  test_get_document.py  test_get_documents_list.py  test_upload_document.py
tests/api/users/: test_registration.py
tests/fixtures/: test_private.pem  test_public.pem
tests/fixtures/documents/: test.docx  test.xlsx
tests/services/: test_extractors.py
tests/worker/: test_extraction_task.py
