[project]
name = "docmind"
version = "0.1.0"
description = "Document analysis app"
authors = [
    {name = "SadLaboka",email = "jiutbuh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "beanie (>=2.1.0,<3.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "faststream[rabbit] (>=0.7.1,<0.8.0)",
    "google-genai (>=2.9.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "docmind", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=2.0.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "C4",
    "PIE",
    "PT",
    "T20",
    "PERF",
    "FURB",
]
ignore = [
    "E501",
    "B008",
    "RUF012",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "T201",
]
"alembic/**/*.py" = [
    "E501",
    "I001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.services.extractors"
disallow_untyped_defs = false
